JOIN-110 bugfix after delete overflow:hidden style problems

--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ textarea {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  margin-top: 120px;
+  margin-top: 130px;
   padding-left: calc(232px + 50px);
   padding-right: 50px;
   overflow-x: hidden !important;
@@ -2163,9 +2163,7 @@ form {
 .containerSummary {
   margin: 120px 0px 0px 292px;
   background-color: #f6f7f8;
-  height: 100vh;
-  background-color: #f6f7f8;
-  height: 100vh;
+  height: 88vh;
   max-width: 1200px; }
 
 .sum-row {
@@ -2474,7 +2472,7 @@ form {
   padding: 80px 64px;
   left: 232px;
   background-color: #f6f7f8;
-  height: 100vh; }
+  height: 80vh; }
 
 .row {
   display: flex;
@@ -4428,7 +4426,7 @@ button:disabled {
   padding: 80px 64px;
   left: 232px;
   background-color: #f6f7f8;
-  height: 100vh; }
+  height: 80vh; }
 
 .row {
   display: flex;
