--- a/sass/components/_addtask.scss
+++ b/sass/components/_addtask.scss
@@ -36,7 +36,7 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  margin-top: 120px;
+  margin-top: 130px;
   padding-left: calc(232px + 50px);
   padding-right: 50px;
   overflow-x: hidden !important;
